--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,2 +1,19 @@
 <app-divider>Table Component</app-divider>
 <app-table class="striped celled" [headers]="headers" [data]="data"></app-table>
+<app-divider>Tab Menu Component</app-divider>
+<app-tabs>
+  <a
+    routerLink="./"
+    class="item"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Biography</a
+  >
+  <a routerLink="./companies" class="item" routerLinkActive="active">
+    Companies
+  </a>
+  <a routerLink="./partners" class="item" routerLinkActive="active">
+    Partners
+  </a>
+</app-tabs>
